Bundle Loader Preprocessor.